--- a/src/app/top-page/top-page.component.css
+++ b/src/app/top-page/top-page.component.css
@@ -14,10 +14,14 @@ img {
     float: left;
     margin-left: 50px;
     width: 50%;
-    height: 100%;    
+    height: 100%;
 }
 
 h1 {
+    color: rgb(10, 45, 150);
+}
+
+h1, h2 {
     text-align: center;
 }
 
