--- a/src/app/top-page/top-page.component.html
+++ b/src/app/top-page/top-page.component.html
@@ -1,10 +1,12 @@
 <div id="top">
     <div id="logo"><img src="src/assets/logo.png"></div>  
 
-    <div id="title"><h1 id="titleMidlePage">{{getTitle()}}</h1></div>  
+    <div id="title">
+        <h1>YoungMov’</h1>
+        <h2 id="titleMidlePage">{{getTitle()}}</h2>
+    </div>  
 
     <div id="user-logout">
-        <h3> Daniellyson <a routerLink=""> Logout </a> </h3>
+        <h3> Daniellyson <a routerLink=""> Logout </a> </h3>        
     </div>
 </div>
-
