--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -29,3 +29,8 @@ label input {
     border-radius: 8px;
     width: 400px;
 }
+
+div h3 {
+    text-align: center;
+    color :rgba(255, 0, 0, 0.849);
+}
