--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,21 +1,35 @@
-.container {    
-    width: 22%;
-    height: 30%;
-    border: 2px solid black;
-    padding: 10px;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+.login-page {
+  width: 360px;
+  padding: 8% 0 0;
+  margin: auto;
+}
+.form {
+  position: relative;
+  background: rgb(235, 231, 231);
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form input {
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.form button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    background:  rgb(15, 71, 236);
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold;   
 }
 
-label, button, a {
-    margin-left: 20%;
-}
-
-div p {
-   text-align: center;
-   color: red;
+p {
+    color: red;
 }
