--- a/src/app/modify-user/modify-user.component.html
+++ b/src/app/modify-user/modify-user.component.html
@@ -1,6 +1,6 @@
 <form action="index.html" method="post">
       
-  <h1>Sign Up</h1>
+  <h1>Edit user data</h1>
   
   <fieldset>
     <legend><span class="number">1</span>Your basic info</legend>
