--- a/src/app/modify-user/modify-user.component.css
+++ b/src/app/modify-user/modify-user.component.css
@@ -1,3 +1,13 @@
 form {
     padding-left: 300px;
+    padding-right: 300px;
+}
+
+label, input {
+    display: block;
+}
+
+label {
+    padding-top: 20px;
+    padding-bottom: 5px;
 }
