--- a/src/app/validation/validation.component.html
+++ b/src/app/validation/validation.component.html
@@ -47,15 +47,14 @@
         <img src="{{pic.url}}"/>
       </div>  
       <div>
-        <p>Brand: </p>
-        <p>Model: </p>
-        <p>Licence plate: </p>
+        <p><span>Brand:</span> asdfasdfsafd</p>
+        <p><span>Model:</span> asdfsadfsafd</p>
+        <p><span>Licence plate:</span> asdfasdfsaf</p>
       </div>
-      <div>
+      <div id="block">
         <button class="validationButton">Validate</button>
         <button class="validationButton">Refuse</button>
       </div>
-   
     </li>
   </ul> 
 </div>
