--- a/src/app/top-page/top-page.component.html
+++ b/src/app/top-page/top-page.component.html
@@ -7,6 +7,15 @@
     </div>  
 
     <div id="user-logout">
-        <h3> Daniellyson <a routerLink=""> Logout </a> </h3>        
+        <div id="userName"> <h3> Daniellyson </h3> </div>
+        <div id="menu">
+            <select>
+                <option></option>
+                <option>Configuration</option>
+                <option routerLink=""> Logout </option>
+            </select>
+        </div>
+        
+        <!--<h3> Daniellyson <a routerLink=""> Logout </a> </h3>  -->      
     </div>
 </div>
