--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,15 +1,16 @@
 <div class="main-right-container">
   <h2>Summary</h2> 
-  <div>
+  <div id="left">
     <h3>Today</h3>
     <p>Total of inscription : {{ users.length }}</p>
     <p>Carpooling created : </p>
   </div>
-  <div>
+  <div id="right">
       <h3>This month</h3>
       <p>Total of inscription : </p>
       <p>Carpooling created : </p>
       <br>
   </div>
-  <h2>Graphics</h2>
+  <h2>Graphic</h2>
+  <div id="chartContainer"></div>
 </div>
