--- a/src/app/top-page/top-page.component.css
+++ b/src/app/top-page/top-page.component.css
@@ -33,10 +33,11 @@ h1, h2 {
     padding-top: 0px;
 }
 
-#userName{
+#userName {
     float: left;
     width: 250px;
     position: absolute;
+    background-color: white;
 }
 
 #menu {
