--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -2,7 +2,7 @@
   <h2>Summary</h2> 
   <div id="left">
     <h3>Today</h3>
-    <p>Total of inscription : {{ users.length }}</p>
+    <p>Total of inscription : {{ women + men }}</p>
     <p>Carpooling created : </p>
   </div>
   <div id="right">
