--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,13 +1,13 @@
 <div class="main-right-container">
   <h2>Summary</h2> 
   <div id="left">
-    <h3>Today</h3>
+    <h3>Genaral</h3>
     <p>Total of inscription : {{ women + men }}</p>
     <p>Carpooling created : </p>
   </div>
   <div id="right">
       <h3>This month</h3>
-      <p>Total of inscription : </p>
+      <p>Total of inscription : {{userMonthCreatedAt}}</p>
       <p>Carpooling created : </p>
       <br>
   </div>
