--- a/src/app/modify-user/modify-user.component.html
+++ b/src/app/modify-user/modify-user.component.html
@@ -1,3 +1,36 @@
+<div class="col-md-6">
+  <h2 class="text-center">Edit User</h2>
+  <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="name">User Name:</label>
+      <input type="text" formControlName="userName" placeholder="User Name" name="username" class="form-control" id="userName">
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email address:</label>
+      <input type="email" formControlName="email" placeholder="Email" name="email" class="form-control" id="email">
+    </div>
+
+    <div class="form-group">
+      <label for="phone">Phone Number:</label>
+      <input formControlName="phone" placeholder="Phone Number" name="phone" class="form-control" id="phone">
+    </div>
+
+    <div class="form-group">
+      <label for="locality">Locality:</label>
+      <input formControlName="locality" placeholder="Locality" name="locality" class="form-control" id="locality">
+    </div>
+
+    <div class="form-group">
+      <label for="drivercode">Trusted carpooling driver code:</label>
+      <input formControlName="drivercode" placeholder="Driver Code" name="drivercode" class="form-control" id="drivercode">
+    </div>
+
+    <button class="btn btn-success">Update</button>
+    <button (click)="backToAllUsers()">Back</button>
+  </form>
+</div>
+<!--
 <form>
   <h1>Edit user data</h1>
   
@@ -20,3 +53,4 @@
   <button>Validate</button>
   <button (click)="backToAllUsers()">Back</button>
 </form>
+-->
