--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,14 +1,14 @@
 <div class="main-right-container">
   <h2>Summary</h2> 
   <div id="left">
-    <h3>Genaral</h3>
+    <h3>General</h3>
     <p>Total of inscription : {{ women + men }}</p>
-    <p>Carpooling created : </p>
+    <p>Carpooling created : {{totalCarpooling}}</p>
   </div>
   <div id="right">
       <h3>This month</h3>
       <p>Total of inscription : {{userMonthCreatedAt}}</p>
-      <p>Carpooling created : </p>
+      <p>Carpooling created : {{carpoolingThisMonth}} </p>
       <br>
   </div>
   <h2>Graphic</h2>
