--- a/src/app/modify-user/modify-user.component.html
+++ b/src/app/modify-user/modify-user.component.html
@@ -17,8 +17,18 @@
     </div>
 
     <div class="form-group">
+      <label for="identityPieceFilename">Name in ID card:</label>
+      <input formControlName="identityPieceFilename" placeholder="Name in ID card" name="identityPieceFilename" class="form-control" id="identityPieceFilename">
+    </div>
+
+    <div class="form-group">
       <label for="locality">Locality:</label>
       <input formControlName="locality" placeholder="Locality" name="locality" class="form-control" id="locality">
+    </div>
+
+    <div class="form-group">
+      <label for="postalCode">Postcode:</label>
+      <input formControlName="postalCode" placeholder="Postcode" name="postalCode" class="form-control" id="postalCode">
     </div>
 
     <div class="form-group">
