--- a/src/app/modify-user/modify-user.component.html
+++ b/src/app/modify-user/modify-user.component.html
@@ -17,11 +17,6 @@
     </div>
 
     <div class="form-group">
-      <label for="identityPieceFilename">Name in ID card:</label>
-      <input formControlName="identityPieceFilename" placeholder="Name in ID card" name="identityPieceFilename" class="form-control" id="identityPieceFilename">
-    </div>
-
-    <div class="form-group">
       <label for="locality">Locality:</label>
       <input formControlName="locality" placeholder="Locality" name="locality" class="form-control" id="locality">
     </div>
@@ -32,8 +27,8 @@
     </div>
 
     <div class="form-group">
-      <label for="drivercode">Trusted carpooling driver code:</label>
-      <input formControlName="drivercode" placeholder="Driver Code" name="drivercode" class="form-control" id="drivercode">
+      <label for="trustedCarpoolingDriverCode">Trusted carpooling driver code:</label>
+      <input formControlName="trustedCarpoolingDriverCode" placeholder="Driver Code" name="trustedCarpoolingDriverCode" class="form-control" id="trustedCarpoolingDriverCode">
     </div>
 
     <button class="btn btn-success">Update</button>
