--- a/src/app/carpooling/carpooling.component.html
+++ b/src/app/carpooling/carpooling.component.html
@@ -11,9 +11,9 @@
       <th>Name</th>
       <th>Date</th>
     </tr>
-    <tr *ngFor="let car of carpooling">
-      <td></td>
-      <td></td>
+    <tr *ngFor="let car of newCarpooling">
+      <td>{{car.userName}}</td>
+      <td>{{ car.date | date:"dd/MM/yy"}}</td>
     </tr>
   </table> 
 </div>
