block access url

--- a/src/app/main-window/main-window.component.html
+++ b/src/app/main-window/main-window.component.html
@@ -1,4 +1,4 @@
-<div id="container">
+<div  *ngIf="showMainPage" id="container">
   <div id="top-page-container">
     <app-top-page></app-top-page>
   </div>
