--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,6 +7,6 @@
       <button (click)="onSubmit(userName.value, password.value)">login</button>
     </form>
     <br>
-    <p id="login" *ngIf="!isLogin">Username or password is incorrect</p>
+    <p id="login" *ngIf="!isLogin">Username or password incorrect</p>
   </div>
 </div>
