--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -2,12 +2,12 @@
   <h2>Summary</h2> 
   <div id="left">
     <h3>General</h3>
-    <p>Total of inscription : {{ women + men }}</p>
+    <p>Total of users : {{ women + men }}</p>
     <p>Carpooling created : {{totalCarpooling}}</p>
   </div>
   <div id="right">
       <h3>This month</h3>
-      <p>Total of inscription : {{userMonthCreatedAt}}</p>
+      <p>Total of users : {{userMonthCreatedAt}}</p>
       <p>Carpooling created : {{carpoolingThisMonth}} </p>
       <br>
   </div>
