--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -63,7 +63,7 @@
           <td>{{ user.email }}</td>
           <td>{{ user.createdAt | date:"dd/MM/yy"}}</td>
           
-          <button (click)="modifyUser(user, user.id)">Modify</button>
+          <button (click)="modifyUser(user.id)">Modify</button>
           <button (click)="deleteUser(user.id)">Delete</button>
         </tr>
       </table>
