--- a/src/app/top-page/top-page.component.html
+++ b/src/app/top-page/top-page.component.html
@@ -10,6 +10,7 @@
         <div id="userName"> <h3> {{adminName}} </h3> </div>
         <div id="menu">
             <select>
+                <option> </option>
                 <option (click)="logout()"> Logout </option>
             </select>
         </div> 
