--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -22,6 +22,10 @@
             <td>{{user.gender}}</td>
           </tr>
           <tr>
+            <th>Address</th>
+            <td>{{user.adresse}}</td>
+          </tr>
+          <tr>
             <th>Locality</th>
             <td>{{user.locality}}</td>
           </tr>
