--- a/src/app/modify-user/modify-user.component.html
+++ b/src/app/modify-user/modify-user.component.html
@@ -2,8 +2,8 @@
   <h2 class="text-center">Edit User</h2>
   <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm)">
     <div class="form-group">
-      <label for="name">User Name:</label>
-      <input type="text" formControlName="userName" placeholder="User Name" name="username" class="form-control" id="userName">
+      <label for="userName">User Name:</label>
+      <input type="text" formControlName="userName" placeholder="User Name" name="userName" class="form-control" id="userName">
     </div>
 
     <div class="form-group">
@@ -14,6 +14,11 @@
     <div class="form-group">
       <label for="phone">Phone Number:</label>
       <input formControlName="phone" placeholder="Phone Number" name="phone" class="form-control" id="phone">
+    </div>
+
+    <div class="form-group">
+      <label for="adresse">Address:</label>
+      <input formControlName="adresse" placeholder="Address" name="adresse" class="form-control" id="adresse">
     </div>
 
     <div class="form-group">
