--- a/src/app/carpooling/carpooling.component.html
+++ b/src/app/carpooling/carpooling.component.html
@@ -8,12 +8,12 @@
   <!--TODO if to print the table with carpooling users-->
   <table >
     <tr>
-      <th>Name</th>
+      <!--<th>Name</th>-->
       <th>Date</th>
     </tr>
-    <tr *ngFor="let car of newCarpooling">
-      <td>{{car.userName}}</td>
-      <td>{{ car.date | date:"dd/MM/yy"}}</td>
+    <tr *ngFor="let carp of carpooling">
+      <!--<td>{{car.userName}}</td>-->
+      <td>{{ carp.createdAt | date:"dd/MM/yy"}}</td>
     </tr>
   </table> 
 </div>
