--- a/src/app/validation/validation.component.html
+++ b/src/app/validation/validation.component.html
@@ -13,8 +13,8 @@
         <img src="{{pic.facePhotoFilename}}"/>
       </div>
       <div>
-          <button class="validationButton" (click)="validateProfilePicture()">Validate</button>
-          <button class="validationButton" (click)="refuseProfilePicture()">Refuse</button>
+          <button class="validationButton" (click)="validatePictures(pic.id, i, 'profilePicture')">Validate</button>
+          <button class="validationButton" (click)="refusePictures(pic.id, i, 'profilePicture')">Refuse</button>
       </div>
 
     </li>
@@ -23,15 +23,15 @@
 
 <div id="idCard" class="tabcontent">
   <h1>ID card</h1>
-  <ul class="picFrame" *ngFor="let pic of pictures">
-    <li class="picValidation" *ngIf="pic.identityPieceFilename != null">
+  <ul class="picFrame" *ngFor="let pic of pictures; let i=index">
+    <li class="picValidation" > <!--*ngIf="pic.identityPieceFilename != null"-->
 
       <div>
           <img src="{{pic.identityPieceFilename}}"/>
       </div>
       <div>
-        <button class="validationButton" (click)="validateIdCard()">Validate</button>
-        <button class="validationButton" (click)="refuseIdCard()">Refuse</button>
+        <button class="validationButton" (click)="validatePictures(pic.id, i, 'idCard')">Validate</button>
+        <button class="validationButton" (click)="refusePictures(pic.id, i, 'idCard')">Refuse</button>
       </div>
 
     </li>
@@ -40,17 +40,17 @@
 
 <div id="vehicle" class="tabcontent">
   <h1>Vehicle</h1>
-  <ul class="picFrame" *ngFor="let car of cars"><!-- | slice:0:10; let i=index-->
+  <ul class="picFrame" *ngFor="let car of cars; let i=index"><!-- | slice:0:10; let i=index-->
     <li class="picValidation">
       <div>
-        <p><span>Owner:</span> {{user}}</p>
+        <p><span>Owner:</span> {{car.ownerName}}</p>
         <p><span>Model:</span> {{car.carModel}}</p>
         <p><span>Color:</span> {{car.color}}</p>
         <p><span>Licence plate:</span> {{car.licensePlateNumber}}</p>
       </div>
       <div id="block">
-        <button class="validationButton" (click)="validaVehicle()">Validate</button>
-        <button class="validationButton" (click)="refuseVehicle()">Refuse</button>
+        <button class="validationButton" (click)="validaVehicle(car.id, i)">Validate</button>
+        <button class="validationButton" (click)="refuseVehicle(car.id)">Refuse</button>
       </div>
     </li>
   </ul>
