--- a/src/app/modify-user/modify-user.component.html
+++ b/src/app/modify-user/modify-user.component.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="form-group">
-      <label for="adresse">Address:</label>
-      <input formControlName="adresse" placeholder="Address" name="adresse" class="form-control" id="adresse">
+      <label for="address">Address:</label>
+      <input formControlName="address" placeholder="Address" name="address" class="form-control" id="address">
     </div>
 
     <div class="form-group">
