--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -67,7 +67,7 @@
               <th>Identity Card Photo Validated On</th>
               <td>{{ user.identityPieceValidatedAt | date:"dd/MM/yy"}}</td>
             </tr>
-            <button (click)="modifyUser(user, user.id)">Modify</button>
+            <button (click)="modifyUser(user.id)">Modify</button>
             <button (click)="deleteUser(user.id)">Delete</button>
           </ng-container>
         </table>
